# netcdf-c

./: CMakeLists.txt  Makefile.am  cf  config.h.cmake.in  configure.ac  libnetcdf.settings.in
cloud_test/: CMakeLists.txt  Makefile.am
docs/: DAP4.dox  Doxyfile.in
include/: ncdispatch.h  ncuri.h  netcdf.h  netcdf_aux.h
libcloud/: CMakeLists.txt  Makefile.am  csdebug.c  csdebug.h  csincludes.h  nccs.h  nccsdispatch.c  nccsdispatch.h  nccstypes.h
libdispatch/: daux.c  ddispatch.c  ncuri.c
liblib/: Makefile.am  nc_initialize.c
ncgen/: bindata.c  data.c  data.h  genbin.c  genchar.c  generr.c  genlib.c  ncgen.y  ncgeny.c  semantics.c
